
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander
- GL   Guillaume Lelarge

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2007-12-11 DP  1.8.1  Correct the URL for the EDB public synonym help page
2007-12-11 HS  1.9.0  Add the keyword 'WHILE' of debugger.
2007-12-10 DP  1.9.0  Add support for typmod in/out functions on custom types
                      [Guillaume Lelarge]
2007-12-10 DP  1.8.1  Fix the debugger's connection class to ensure database
                      names requiring quotes will work and that is can be used
                      with SSL and Kerberos connections.
2007-12-07 DP  1.8.1  Allow the length of array-typed columns to be changed
                      (eg. 'character varying[](100)'), per report from Ferenc
                      Lutischan
2007-12-05 DP  1.8.1  Don't allow the user to direct-debug trigger functions,
                      only global breakpoints should be used on them (or the
                      trigger itself).
2007-12-05 DP  1.8.1  Don't offer edbspl functions when creating triggers as
                      they should have inline bodies.
2007-12-04 DP  1.8.1  Don't quote database names that happen to be keywords
                      when starting the debugger.
2007-12-03 GL  1.9.0  Add an option to alter a language's owner
2007-11-30 DP  1.8.1  Don't offer package names and system schemas as schemas
                      when creating public synonyms.
2007-11-28 DP  1.8.1  Fix pgAgent's job query when a host agent is specified
                      so that jobs don't execute every time round the loop
                      regardless of schedule, per Brian Kalbfus.
2007-11-28 DP  1.8.1  Add EnterpriseDB's default database (edb) to the Server
                      dialog's default option.