@@ -36,6 +36,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-12-11 DP  1.8.1  Check that functions exist before debugging or setting
+                      global breakpoints on them. Remove them from the treeview
+                      if not.
 2007-12-11 DP  1.8.1  Correct the URL for the EDB public synonym help page
 2007-12-11 HS  1.9.0  Add the keyword 'WHILE' of debugger.
 2007-12-10 DP  1.9.0  Add support for typmod in/out functions on custom types
